Use Set.of instead of creating two new objects
Signed-off-by: GoldenStack <goldenfire64yt@gmail.com>